--- a/languages/language_en-US.json
+++ b/languages/language_en-US.json
@@ -98,8 +98,8 @@
         },
         "spawner": {
             "countdown": "<yellow><seconds> <bold>seconds",
-            "countdown_custom": "<yellow><value> <bold><unit>",
-            "every_second": "<bold>every second",
+            "countdown_custom": "<yellow><value> <aqua><unit>",
+            "every_second": "<aqua>every second",
             "full": "<red><bold>Spawner is depleted",
             "full_hypixel": "<red><bold>Spawner is full!",
             "not_enough_level": "<red>Spawner can't work! You need to upgrade by <levels> levels.",
